--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-form": "4.1.3",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.22.1"
